optimized move functions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <link rel="stylesheet" media="screen" href="css/01-main.css" />
   <!-- <link rel="stylesheet" media="screen" href="libraries/bootstrap-slider-master/css/bootstrap-slider.css" /> -->
   
-	<!-- Custom scripts -->
+  <!-- Custom scripts -->
+  <script src="js/painter/main_color.js"></script>
   <script src="js/painter/main.js"></script>
   <script src="js/painter/main_bubble.js"></script>
 
